# bin_it_right

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  kind-config.yaml  pyproject.toml
bin_it_right/: api.py  config.py  dataset.py
bin_it_right/modeling/: classifier.py  image_transformers.py  predict.py  pytorch.py  tensorflow.py  train.py
kubernetes/: deployment.yaml  service.yaml
kubernetes/base/: deployment.yaml
kubernetes/overlays/gke/: kustomization.yaml  service-gke.yaml
kubernetes/overlays/kind/: kustomization.yaml  service-kind.yaml
notebooks/: 01_etl.ipynb  02_eda.ipynb  03_pytorch_pretrained.ipynb  03_pytorch_raw.ipynb  03_tensorflow_pretrained.ipynb  03_tensorflow_raw.ipynb
