[project]
name = "bin-it-right"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.110.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.1.0",
    "matplotlib>=3.8.0",
    "numpy>=1.23.5,<2.0.0",
    "pandas>=2.1.0,<2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "tensorflow==2.15.0",
    "tensorflow-macos==2.15.0",
    "tensorflow-metal==1.1.0",
    "torch",
    "torchinfo",
    "torchvision",
    "types-pyyaml>=6.0.12",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.11.9"
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
